[FIX] Add correct spacing between links

--- a/src/components/CountryDetails/CountryDetails.css
+++ b/src/components/CountryDetails/CountryDetails.css
@@ -71,9 +71,6 @@
 
 .borders a {
     text-decoration: none;
-}
-
-.borders span {
     padding: 0.5rem 1rem;
     background: var(--primary-color);
     box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.17);
